--- a/final website/web.html
+++ b/final website/web.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <section id="home">
-        <h1 class="h-primary">Welcome to Blockchain</h1>
+        <h1 class="h-primary">Welcome to NFT store</h1>
         
         <button class="btn"><a href="nft.html">Buy Now</a></button>
         
