--- a/final website/web.html
+++ b/final website/web.html
@@ -12,7 +12,7 @@
     
     <nav id="navbar">
         <div id="logo">
-            <img src="logo.png" alt="Blockchain.com">
+            <img src="kill.PNG" alt="Blockchain.com">
         </div>
         <ul>
             <li class="item"><a href="#home">Home</a></li>
